[package]
name = "problem_child"
version = "0.1.0"
authors = ["Sebastian Paarmann <sebastian.paarmann@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
simplelog = "0.8"
serenity = { version = "0.10", default-features = false, features = ["cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8", features = ["full"] }
