[package]
name = "problem_child"
version = "0.1.0"
authors = ["Sebastian Paarmann <git@s-paarmann.de>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serenity = { version = "0.11", default-features = false, features = ["cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["full"] }
